vs import improvement